reverted version changes